# stream-ai

./: CMakeLists.txt  README.md
examples/: capture_benchmark.cpp  capture_benchmark.py  list_devices.cpp  list_devices.py  quickstart.cpp  quickstart.py
include/streamcam/: streamcam.h
src/: backend_factory.cpp  python_module.cpp  streamcam.cpp
src/internal/: backend.hpp  frame_store.hpp
src/platform/linux/: backend.cpp  backend.hpp
src/platform/macos/: backend.hpp  backend.mm
src/platform/windows/: backend.cpp  backend.hpp
